# python-package-manager

./: README.md  pyproject.toml  setup.py  structure.txt
examples/: advanced_usage.py  basic_usage.py
src/package_manager/: __init__.py  exceptions.py  manager.py  registry.py  utils.py  version.py
tests/: conftest.py  test_exceptions.py  test_integration.py  test_manager.py  test_registry.py  test_utils.py  test_version.py
